@@ -1,0 +1,2 @@
+Net::Curl provides a Perl interface to libcurl created with
+object-oriented implementations in mind.
